Dev fixes for splash screen and styles. In process of the app logo and icons. Next will be the content of the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NewCvResume</string>
+    <string name="app_name">Sandroid</string>
     <string name="success">Success!</string>
     <string name="failed">Failed!</string>
     <string name="enter_email_address">Enter Email Address!</string>
@@ -19,4 +19,5 @@
     <string name="fragmentthree">Fragment Three</string>
     <string name="fragmentfour">Fragment Four</string>
     <string name="fragmentfive">Fragment Five</string>
+    <string name="logoapp">logo_app</string>
 </resources>
